--- a/Fulcrum_FluidTX_Trunk/src/com/proj/config/Environment.properties
+++ b/Fulcrum_FluidTX_Trunk/src/com/proj/config/Environment.properties
@@ -1,2 +1,2 @@
-#Hilti-QA for Hilti on QA,Trimble-QA for Trimble on QA,Hilti-CI for Hilti on CI
-Environment=LT-QA
+#LT-FluidTx-QA for FluidTX on QA on CI
+Environment=LT-FluidTx-QA
