Updated user data with automation user credentails

--- a/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
+++ b/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
@@ -3,18 +3,18 @@ testSiteName=atprojects.leapthought.co.nz/sites/FluidTx7/SitePages/Home.aspx/
 #R for Regression,p for Partial Regression,S for sanity
 SuiteMode=s
 # ie, firefox,chrome
-browserType_DOCS= chrome
+browserType_DOCS= ie
 browserType_TRANS= ie
 
-# Admin Credentails
-adminUserName= admin@customer.com
-adminpassword= inno1234
+# Non - Admin Credentails
+normalUserName= AutoTestUser
+normalpassword= W3lcome2016
 # User Credentails  
 userDomain=LeapThought
 userUserName=spinstall
 userpassword=j@deSteel54
-userUserName2=anupamaT
-userpassword2=Password@03
+userUserName2=AutoTestAdmin
+userpassword2=W3lcome2016
 
 # Database details (optional has to be fetched from DB)
 DB_FLAG=no
