Instead of normal user keys changed to userusername3 and userpassword3

--- a/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
+++ b/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
@@ -6,15 +6,14 @@ SuiteMode=s
 browserType_DOCS= ie
 browserType_TRANS= ie
 
-# Non - Admin Credentails
-normalUserName= AutoTestUser
-normalpassword= W3lcome2016
 # User Credentails  
 userDomain=LeapThought
 userUserName=spinstall
 userpassword=j@deSteel54
 userUserName2=AutoTestAdmin
 userpassword2=W3lcome2016
+userUserName3=AutoTestUser
+userpassword3=W3lcome2016
 
 # Database details (optional has to be fetched from DB)
 DB_FLAG=no
