Included sub-site user credentials

--- a/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
+++ b/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
@@ -14,6 +14,8 @@ userUserName1=AutoTestAdmin
 userpassword1=W3lcome2016
 userUserName2=AutoTestUser
 userpassword2=W3lcome2016
+userUserName3=Anupamat
+userpassword3=Password@04
 
 # Database details (optional has to be fetched from DB)
 DB_FLAG=no
