updated testReposirotyURL as per LAT

--- a/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
+++ b/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
@@ -27,7 +27,7 @@ DB_DATABASE=qa
 DB_USERID=crs_data_qa
 DB_PSWD=stratos
 #testrepository
-testRepository_URL=http://ma-qa-apps3:8080/browse/
+testRepository_URL=https://leapthought.atlassian.net/browse/
 # customized reporting
 htmlReporting=yes
 excelReporting=yes
