--- a/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
+++ b/Fulcrum_FluidTX_Trunk/src/com/proj/config/LT-FluidTx-QA.properties
@@ -2,6 +2,10 @@ testSiteName=atprojects.leapthought.co.nz/sites/FluidTx7/SitePages/Home.aspx/
 
 #R for Regression,p for Partial Regression,S for sanity
 SuiteMode=s
+
+#screen capture webdriver,ashot,robo,remotewebdriver
+captureTool=robo
+
 # ie, firefox,chrome
 browserType_DOCS= ie
 browserType_TRANS= ie
@@ -40,7 +44,7 @@ emailReceipients=shaikk@leapthought.co.nz,kashaik@ymail.com
 emailSubject=CI-Automailer : The nightly build has been deployed -	
 emailMessage=Hello!\n \nJenkins CI has completed deployment of the nightly build on  time .\n\nThe Sanity Check has seleniumsuitestatus\npassCount out of totalCount Test Cases have passed.\n\nTest Results are 
 emailSignature=\n\n\nThanks,\nQA Team
-publishedResultsOpenLocation=shaikexe:8090/FluidResults/fileName/HTMLReporting/index.html
+publishedResultsOpenLocation=DEVENVYM601:8090/FluidResults/fileName/HTMLReporting/index.html
 #dl.dropboxusercontent.com/u/34921298/Results/fileName/TestSummary.html
 #dropboxlocalLocation=C:/Users/username/Dropbox/Public/Results/
 publishedResultsLocation=C:/Program Files/Apache Software Foundation/Tomcat 7.0/webapps/FluidResults/fileName
